--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "anything ",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "test"
+    "start1": "node ./src/approach-1/index.js"
   },
   "dependencies": {
     "compression": "^1.8.1",
@@ -16,6 +15,12 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
-    "mysql2": "^3.15.2"
+    "ioredis": "^5.8.2",
+    "mysql2": "^3.15.2",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "rate-limiter-flexible": "^8.1.0",
+    "redis": "^5.9.0",
+    "sequelize": "^6.37.7"
   }
 }
