--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start1": "node ./src/approach-1/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -16,6 +17,7 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
