--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "start1": "node ./src/approach-1/index.js",
     "dev1": "cross-env NODE_ENV=development nodemon ./src/approach-1/index.js",
-    "start-2": "node ./src/approach-2/index.js",
-    "dev2": "cross-env NODE_ENV=development nodemon ./src/approach-2/index.js",
+    "start-2": "node ./src/approach-2/index.api.js",
+    "dev2": "cross-env NODE_ENV=development nodemon ./src/approach-2/index.api.js",
     "insert-product": "node ./scripts/insertProduct.js",
     "init-stock": "node ./scripts/initStock.js",
     "worker:orders": "node ./src/approach-2/workers/orderWorker.js",
