feat: enhance load testing scripts and analysis for Black Friday sales, improve error handling and logging

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "start1": "node ./src/approach-1/index.js",
-    "start2": "node ./src/loadBalancer.js"
+    "start2": "node ./src/loadBalancer.js",
+    "a1": "node ./tests/tools/a1Run.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
