--- a/src/loadBalancer/nginx.conf
+++ b/src/loadBalancer/nginx.conf
@@ -1,67 +1,75 @@
-worker_processes  2;
+worker_processes auto;
 
-events { worker_connections  2048; }
+events {
+  worker_connections 4096;
+}
 
 http {
   sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  keepalive_timeout 65;
+  types_hash_max_size 2048;
 
-  underscores_in_headers on;
+  # ارفع أداء DNS الداخلي بين الحاويات
+  resolver 127.0.0.11 ipv6=off valid=30s;
 
-
+  # موازنة الـ API
   upstream api_upstream {
     least_conn;
-    server api1:3000 max_fails=3 fail_timeout=10s;
-    server api2:3000 max_fails=3 fail_timeout=10s;
-    server api3:3000 max_fails=3 fail_timeout=10s;
-    server api4:3000 max_fails=3 fail_timeout=10s;
+    server api:3000 max_fails=3 fail_timeout=10s;  # Docker سيتعامل مع التكرار تلقائياً عند --scale
+    keepalive 64;
   }
 
+  # موازنة الـ SSE (اتصالات طويلة)
   upstream sse_upstream {
-    server sse1:4000 max_fails=3 fail_timeout=10s;
-    server sse2:4000 max_fails=3 fail_timeout=10s;
+    server sse:4000 max_fails=3 fail_timeout=10s;
+    keepalive 64;
   }
 
   server {
     listen 80;
+    server_name _;
 
+    # --------- API ---------
     location /api/ {
-      proxy_pass         http://api_upstream/;   
+      proxy_pass         http://api_upstream/;
       proxy_http_version 1.1;
-
       proxy_set_header   Host                $host;
       proxy_set_header   X-Real-IP           $remote_addr;
       proxy_set_header   X-Forwarded-For     $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto   $scheme;
-
-      proxy_set_header   Authorization        $http_authorization;
-
-      proxy_set_header   Idempotency-Key      $http_idempotency_key;
-
-      proxy_set_header   X-Request-Id         $request_id;
-      proxy_set_header   X-Original-URI       $request_uri;
-
-      proxy_set_header   Connection           "";
+      proxy_set_header   Authorization       $http_authorization;
+      proxy_set_header   Idempotency-Key     $http_idempotency_key;
+      proxy_set_header   Connection          "";
       proxy_read_timeout 30s;
-
       proxy_next_upstream error timeout http_502 http_503 http_504;
       proxy_next_upstream_tries 3;
     }
 
-    # ---------- SSE ----------
+    # --------- SSE ---------
     location /sse/ {
       proxy_pass         http://sse_upstream/;
       proxy_http_version 1.1;
-
       proxy_set_header   Host                $host;
       proxy_set_header   X-Real-IP           $remote_addr;
       proxy_set_header   X-Forwarded-For     $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Proto   $scheme;
-
-      proxy_buffering    off;
-      proxy_read_timeout 3600s;
-
+      proxy_buffering    off;                  # ضروري للـ stream الحي
+      proxy_read_timeout 3600s;               # اتصالات طويلة
       add_header         X-Accel-Buffering   no;
       add_header         Cache-Control       no-cache;
+    }
+
+    # --------- Health Check ---------
+    location /health {
+      return 200 "OK\n";
+      add_header Content-Type text/plain;
+    }
+
+    # --------- Fallback ---------
+    location / {
+      return 404;
     }
   }
 }
