--- a/src/loadBalancer/nginx.conf
+++ b/src/loadBalancer/nginx.conf
@@ -1,8 +1,6 @@
 worker_processes auto;
 
-events {
-  worker_connections 4096;
-}
+events { worker_connections 8192; }
 
 http {
   sendfile on;
@@ -11,20 +9,21 @@ http {
   keepalive_timeout 65;
   types_hash_max_size 2048;
 
-  # ارفع أداء DNS الداخلي بين الحاويات
-  resolver 127.0.0.11 ipv6=off valid=30s;
+  # Docker embedded DNS
+  resolver 127.0.0.11 ipv6=off valid=10s;
 
-  # موازنة الـ API
+  # لازم zone للـ upstream حتى يشتغل resolve وقت التشغيل
   upstream api_upstream {
+    zone api_zone 64k;
     least_conn;
-    server api:3000 max_fails=3 fail_timeout=10s;  # Docker سيتعامل مع التكرار تلقائياً عند --scale
-    keepalive 64;
+    server api:3000 resolve max_fails=3 fail_timeout=10s;
+    keepalive 256;
   }
 
-  # موازنة الـ SSE (اتصالات طويلة)
   upstream sse_upstream {
-    server sse:4000 max_fails=3 fail_timeout=10s;
-    keepalive 64;
+    zone sse_zone 64k;
+    server sse:4000 resolve max_fails=3 fail_timeout=10s;
+    keepalive 256;
   }
 
   server {
@@ -35,13 +34,13 @@ http {
     location /api/ {
       proxy_pass         http://api_upstream/;
       proxy_http_version 1.1;
-      proxy_set_header   Host                $host;
-      proxy_set_header   X-Real-IP           $remote_addr;
-      proxy_set_header   X-Forwarded-For     $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto   $scheme;
-      proxy_set_header   Authorization       $http_authorization;
-      proxy_set_header   Idempotency-Key     $http_idempotency_key;
-      proxy_set_header   Connection          "";
+      proxy_set_header   Host              $host;
+      proxy_set_header   X-Real-IP         $remote_addr;
+      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_set_header   Authorization     $http_authorization;
+      proxy_set_header   Idempotency-Key   $http_idempotency_key;
+      proxy_set_header   Connection        "";
       proxy_read_timeout 30s;
       proxy_next_upstream error timeout http_502 http_503 http_504;
       proxy_next_upstream_tries 3;
@@ -51,25 +50,17 @@ http {
     location /sse/ {
       proxy_pass         http://sse_upstream/;
       proxy_http_version 1.1;
-      proxy_set_header   Host                $host;
-      proxy_set_header   X-Real-IP           $remote_addr;
-      proxy_set_header   X-Forwarded-For     $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto   $scheme;
-      proxy_buffering    off;                  # ضروري للـ stream الحي
-      proxy_read_timeout 3600s;               # اتصالات طويلة
-      add_header         X-Accel-Buffering   no;
-      add_header         Cache-Control       no-cache;
+      proxy_set_header   Host              $host;
+      proxy_set_header   X-Real-IP         $remote_addr;
+      proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Proto $scheme;
+      proxy_buffering    off;
+      proxy_read_timeout 3600s;
+      add_header         X-Accel-Buffering no;
+      add_header         Cache-Control     no-cache;
     }
 
-    # --------- Health Check ---------
-    location /health {
-      return 200 "OK\n";
-      add_header Content-Type text/plain;
-    }
-
-    # --------- Fallback ---------
-    location / {
-      return 404;
-    }
+    location /health { return 200 "OK\n"; add_header Content-Type text/plain; }
+    location /       { return 404; }
   }
 }
