--- a/.env.docker
+++ b/.env.docker
@@ -1,6 +1,8 @@
 DB_HOST: postgres
 DB_PORT: 5432
-DB_USER: postgres
-DB_PASS: "1"
-DB_NAME: flashsale_dev
+POSTGRES_USER: postgres
+POSTGRES_PASSWORD: "1"
+POSTGRES_DB: flashsale_dev
 REDIS_URL: redis://redis:6379
+
+
